[package]
name = "plonky2-bn254-poseidon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves.git", tag = "0.3.1" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
hex = "0.4"
num = "0.4"
plonky2 = { git = "https://github.com/polymerdao/plonky2", default-features = false }
plonky2_ecdsa = { git = "https://github.com/polymerdao/plonky2", default-features = false }
plonky2_u32 = { git = "https://github.com/polymerdao/plonky2", default-features = false }
poseidon-circuit = { git = "https://github.com/scroll-tech/poseidon-circuit" }
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
